ARROW-2646: [C++/Python] Pandas roundtrip for date objects

Author: Krisztián Szűcs <szucs.krisztian@gmail.com>

Closes #2535 from kszucs/ARROW-2646 and squashes the following commits:

1f36aa6d9 <Krisztián Szűcs> add plasma_store_server to gitignore
2f6a31061 <Krisztián Szűcs> flake8
070e97520 <Krisztián Szűcs> test case for ChunkedArray and Column
8b44f7a02 <Krisztián Szűcs> support date_as_object in ArrowDeserializer
6ee8d2d85 <Krisztián Szűcs> ConvertDates if date_as_object PandasOption is set